# notevault

./: .gitattributes  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
scripts/: static-build.mjs  static-template.html
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  fsrs.rs  git.rs  lib.rs  main.rs  state.rs  test_helpers.rs
src-tauri/src/commands/: ai.rs  cards.rs  git.rs  links.rs  mod.rs  notes.rs  publish.rs  search.rs  vault.rs
src-tauri/src/db/: mod.rs
src/components/: AIPanel.vue  BacklinksPanel.vue  CardReviewPanel.vue  Editor.vue  FileTreeNode.vue  GitPanel.vue  GraphPanel.vue  GraphView.vue  Preview.vue  PublishPanel.vue  SearchPalette.vue  Sidebar.vue  StatusBar.vue  ToastHost.vue  TocPanel.vue  Welcome.vue
src/lib/: format.ts  frontmatter.ts  highlight.ts  markdown.ts  mermaid.ts  tauri.ts
src/stores/: ai.ts  cards.ts  git.ts  graph.ts  links.ts  notes.ts  publish.ts  toast.ts  ui.ts  vault.ts
src/types/: index.ts
