[package]
name = "note-vault"
version = "0.1.0"
description = "A local-first note vault with bidirectional links, FSRS spaced repetition, and AI integration."
authors = ["NoteVault Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "note_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Database (SQLite with FTS5)
rusqlite = { version = "0.32", features = ["bundled"] }

# File system walking
walkdir = "2"

# File watching
notify = "6"

# Regex for parsing wikilinks and tags
regex = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# YAML frontmatter
serde_yaml = "0.9"

# SHA256 for change detection
sha2 = "0.10"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }

# Error handling
thiserror = "1"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = 1
incremental = false
